- Added EngineMessage::DestroyedFuncAsMemberListArg and EngineMessage::NonFunctionAsMemberListArg.
- Changed ObjectList::prepend() to push_front() and added push_back(), changing append() to defer to calling it.
- Fixed bug in setupBuiltinFunctionExecution preventing system function calls.
- Implemented stack trace printing in Engine and Stack.
- Removed deprecated Logger interface function.
- Added Logger::printTaskTrace() and Logger::printStackTrace().
- Changed TaskName to TaskType.
- Changed implementation of ObjectString::getIntegerValue() and ObjectString::getDecimalValue() to return converted value forms.
- Fixed String::toInt() to return correct value when string begins with a minus sign.

utilPile.h created.

EngMsgToStr
- Updated.

InStreamLogger.h
- Added pretty print.

Printer.h
- Added pretty print.


====================
2018/2/13
v 5-0.3

- Removed getTask() from Opcode and changed Engine to generate the tasks itself.
- Removed Opcode::getCopy() and its implementations.
- MAJOR CHANGE: Changed entire Opcode system to use only Opcode, removing old Opcode implementations.
- Abstracted ownership system for FunctionContainers so that lists can own them.
- Added preprocessor define COPPER_VAR_STRICT_CHECKS for checking/hiding checks on Variable "box" integrity.


====================
2018/1/30
v 5-0.24

Printer.h
- Changed call method to use types for identifying numbers.


====================
2018/1/28
v 5-0.24

- Added Object::getIntegerValue() and Object::getDecimalValue().


====================
2018/1/27
v 5-0.23

- Added List type to built-in types.
- Replaced Number object type with Integer and Decimal types.
- Added ObjectTypeIdentifier.
- ObjectNumber now defaults to ObjectType::Integer but switches to ObjectType::Decimal when decimal is found.
- Removed TT_number and added TT_num_integer and TT_num_decimal.